--- a/css/styles.css
+++ b/css/styles.css
@@ -76,3 +76,149 @@ h1 {
   text-align: center;
 }
 
+.products-access-button {
+  margin: 0 30px;
+}
+
+.other-products {
+  font-family: 'Maven Pro', sans-serif;
+  font-size: 23px;
+  text-align: center;
+  margin: 0 0 35px;
+}
+
+.products {
+  padding: 20px 15px 40px;
+  background-color: rgb(66, 194, 104);
+}
+
+.products p {
+  color: rgba(0, 0, 0, 0.75);
+  margin: 0;
+}
+
+.products-bottom {
+  font-family: 'Maven Pro', sans-serif;
+  font-size: 14px;
+  width: 25%;
+  margin: 50px 0 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center space-between;
+}
+
+.article-bottom {
+  color: black;
+  font-family: 'Maven Pro', sans-serif;
+  margin-right: 130px;
+}
+
+h2 {
+  font-family: 'Sriracha', sans-serif;
+  color: black;
+  margin: 5px 5px 0 0;
+}
+
+.banana {
+  background-color: rgb(252, 247, 214);
+  color: black;
+  border-radius: 23px;
+  padding: 10px 10px 10px 20px;
+  margin: 20px 0;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+}
+
+.kiwi {
+  background-color: rgb(185, 238, 172);
+  color: black;
+  border-radius: 23px;
+  padding: 10px 10px 10px 20px;
+  margin: 20px 5px;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+}
+
+.coffee {
+  background-color: rgb(205, 196, 176);
+  color: black;
+  border-radius: 23px;
+  padding: 10px 10px 10px 20px;
+  margin: 20px 0;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+}
+
+.strawberry {
+  background-color: rgb(226, 162, 177);
+  color: black;
+  border-radius: 23px;
+  padding: 10px 10px 10px 20px;
+  margin: 20px 0;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+}
+
+.flavor-strawberry {
+  background-color: rgb(226, 162, 177);
+  border-radius: 23px;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+  margin: 0 10px;
+  padding: 0 0 5px 10px;
+  font-size: 90%;
+}
+
+.flavor-coffee {
+  background-color: rgb(205, 196, 176);
+  border-radius: 23px;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+  margin: 0 10px;
+  padding: 0 0 5px 10px;
+  font-size: 90%;
+}
+
+h3 {
+  font-family: 'Maven Pro', sans-serif;
+  margin: 30px 0 40px;
+  font-size: 26px;
+}
+
+.kiwi-syrup {
+  background-color: rgb(185, 238, 172);
+  text-align: center;
+  color: rgba(0, 0, 0, 0.2);
+  padding: 35px 55px 60px;
+}
+
+.kiwi-syrup img {
+  width: 40%;
+  padding: 30px;
+  border-radius: 95px;
+  background-color: white;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
+}
+
+.kiwi-infos {
+  background-color: rgb(66, 194, 104);
+  padding: 31px 70px 55px;
+  font-size: 14px;
+}
+
+.kiwi-infos img {
+  width: 95%;
+}
+
+.choosing {
+  background-color: rgb(185, 238, 172);
+  color: black;
+  padding: 50px 20px;
+}
+
+.choosing img {
+  width: 40%;
+}
+
+.selection {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-bottom: 50px;
+}
+
