--- a/css/styles.css
+++ b/css/styles.css
@@ -222,3 +222,20 @@ h3 {
   margin-bottom: 50px;
 }
 
+footer {
+  background-color: white;
+  color: rgb(125, 185, 111);
+  padding: 20px 30px 10px;
+}
+
+.footer-nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.copyrights {
+  font-size: 13px;
+  text-align: center;
+  margin: 50px 0 0;
+}
